--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,6 @@
     "webRequest",
     "webRequestBlocking",
     "storage",
-    "unlimitedStorage",
     "tabs",
     "notifications",
     "<all_urls>"
@@ -26,7 +25,7 @@
 
   "browser_action": {
     "browser_style": true,
-    "default_popup": "popup/display_switch.html",
+    "default_popup": "popup/popup.html",
     "default_title": "Port Authority",
     "default_icon": {
       "16": "icons/logo-16.png",
