--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,12 @@
       "16": "icons/logo-16.png",
       "32": "icons/logo-32.png"
     }
+  },
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{6c00218c-707a-4977-84cf-36df1cef310f}"
+    }
   }
 
 }
