Fix "Blocking" toggle switch in popup

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,9 @@
   ],
 
   "background": {
-    "page": "background-page.html"
+    "scripts": [
+      "background.js"
+    ]
   },
 
   "browser_action": {
