--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 
-  "description": "Blocks websites from port scanning your computer",
+  "description": "Blocks websites from using javascript to port scan your computer/network and dynamically blocks all LexisNexis endpoints from running their invasive data collection scripts. ",
   "manifest_version": 2,
   "name": "Port Authority",
   "version": "1.1.0",
