--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "description": "Blocks websites from using javascript to port scan your computer/network and dynamically blocks all LexisNexis endpoints from running their invasive data collection scripts. ",
   "manifest_version": 2,
   "name": "Port Authority",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "homepage_url": "https://github.com/ACK-J/Port_Authority",
   "icons": {
     "48": "icons/logo-48.png",
@@ -43,6 +43,11 @@
     "gecko": {
       "id": "{6c00218c-707a-4977-84cf-36df1cef310f}"
     }
+  },
+
+  "options_ui": {
+    "page": "popup/settings.html"
   }
+
 
 }
