feat: remove whitelisted domains

--- a/manifest.json
+++ b/manifest.json
@@ -45,6 +45,19 @@
     }
   },
 
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "popup/PopupUI.js",
+        "popup/settings.js",
+        "popup/switch.js"
+      ]
+    }
+  ],
+
   "options_ui": {
     "page": "popup/settings.html"
   }
