Use workaround to support Manifest V2 (why still? idk) background scripts using module syntax

--- a/manifest.json
+++ b/manifest.json
@@ -22,11 +22,7 @@
   ],
 
   "background": {
-    "scripts": [
-      "background.js",
-      "constants.js",
-      "BrowserStorageManager.js"
-    ]
+    "page": "background.html"
   },
 
   "browser_action": {
