Removed switch.js from content scripts since it's only needed in the `browser_action` Still unsure if `PopupUI.js` is needed as a content script, highly suspect not.

--- a/manifest.json
+++ b/manifest.json
@@ -47,8 +47,7 @@
         "<all_urls>"
       ],
       "js": [
-        "popup/PopupUI.js",
-        "popup/switch.js"
+        "popup/PopupUI.js"
       ]
     }
   ],
