Reverted adding `background.html` to load background.js, turns out module syntax is actually still supported in manifest v2

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
   ],
 
   "background": {
-    "page": "background.html"
+    "scripts": ["background.js"],
+    "type": "module"
   },
 
   "browser_action": {
